<resources>
    <string name="app_name">delavergy</string>
    <string name="waiting">Waiting</string>
    <string name="error">Error</string>
    <string name="no_connection">No internet connection</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_recovery">Password recovery</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="reset_string">Please,enter phone number\nto receive code to create new password</string>
    <string name="send">Send</string>
    <string name="receive_code">Receive sent code</string>
    <string name="verify_string">Enter your OTP code here</string>
    <string name="resend_string">Resend the code</string>
    <string name="resend">Resend</string>
    <string name="reset_password_string">Format password</string>
    <string name="new_password_string">Enter new password</string>
    <string name="refresh">Refresh</string>
    <string name="conform_password">Conform password</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="notification">Notification</string>
    <string name="delivery_value">Delivery value</string>
    <string name="attainment_complete">Attainment complete</string>
    <string name="receiver_address">receiving address text</string>
    <string name="order_details">Order details</string>
    <string name="order_delivered">The order was delivered</string>
    <string name="app_dues">Application dues</string>
    <string name="captain_dues">Captain dues</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="orders">Orders</string>
    <string name="contact_us">Contact us</string>
    <string name="profile">profile</string>
    <string name="your_percentage_of_orders">Your percentage of Orders</string>
    <string name="total_delivery_value">Total delivery value</string>
    <string name="company_dues">Company dues</string>
    <string name="currency">R.S</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="follow">Follow us</string>
    <string name="send_message">Send massage</string>
    <string name="filter">Filter</string>
    <string name="processing_orders">Processing orders</string>
    <string name="finished_orders">Finished orders</string>
    <string name="identity">Identity</string>
    <string name="vehicle_img">Vehicle Image</string>
    <string name="vehicle_license">Vehicle License</string>
    <string name="driving_license">Driving License</string>
    <string name="insurance_img">Insurance Image</string>
    <string name="credit_note">Credit note</string>
    <string name="full_name">Full name</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="city">City</string>
    <string name="finished_license">Finished license</string>
    <string name="car_type">Car Type</string>
    <string name="plate_number">Plate number</string>
    <string name="edit_password">Edit password</string>
    <string name="new_order">New order</string>
    <string name="far_from_you">Far from you</string>
    <string name="reject_order">Rejct order</string>
    <string name="accept_order">Accept order</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="required_field">Required field</string>
    <string name="not_match">Not match</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="liaison_officer">Liaison officer</string>
    <string name="administrative">Administrative</string>
    <string name="order_type">Order type</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="get_privacy">Get Privacy settings</string>
    <string name="six_char">The password must be at least 6 characters.</string>
    <string name="reset_password_request">Reset Password requst</string>
    <string name="verify_code">Verfiy code</string>
    <string name="all_orders">All orders</string>
    <string name="get_orders">Get Orders</string>
    <string name="un_able_get_location">Unable to get location.</string>
    <string name="getSettings">Get settings</string>
    <string name="complete">Complete</string>
    <string name="uncomplete">Uncomplete</string>
    <string name="get_order">Get order details</string>
    <string name="send_email">Send Email</string>
    <string name="invoice_number">Invoice number for order</string>
    <string name="delivery_order">Delivered the order</string>
    <string name="sender_address">sender address text</string>
    <string name="store_address">Store address text</string>
    <string name="pick_up_order">Pickup order</string>
    <string name="send_address">send address</string>
    <string name="receive_address">receive address</string>
    <string name="get_user_data">Get user data</string>
</resources>