<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.password.step_one.ResetStepOneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/white_button"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <TextView
            style="@style/LargeTextViewStyle"
            android:text="@string/password_recovery" />

        <TextView
            style="@style/SmallTextViewStyle"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/reset_string"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:layout_marginBottom="@dimen/large_margin"
            android:hint="@string/phone_number">

            <EditText
                android:id="@+id/et_phone"
                style="@style/EditTextStyle"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_send"
            style="@style/ButtonStyle"
            android:background="@drawable/dark_gray_button"
            android:text="@string/send" />

    </LinearLayout>

</FrameLayout>