<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.password.step_three.ResetStepThreeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/white_button"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <TextView
            style="@style/LargeTextViewStyle"
            android:text="@string/reset_password_string" />

        <TextView
            style="@style/SmallTextViewStyle"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/new_password_string" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:hint="@string/password"
            android:layout_marginBottom="@dimen/small_margin">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:hint="@string/conform_password"
            android:layout_marginBottom="@dimen/small_margin">

            <EditText
                android:id="@+id/et_conform_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_refresh"
            style="@style/DarkButtonStyle"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/refresh"
         />

    </LinearLayout>

</FrameLayout>