<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_button"
    android:orientation="vertical"
    android:padding="@dimen/small_margin">

    <TextView
        style="@style/LargeTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/change_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@drawable/edit_text"
        android:hint="@string/old_password"
        android:padding="@dimen/little_margin">

        <EditText
            android:id="@+id/et_old_password"
            style="@style/EditTextStyle"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@drawable/edit_text"
        android:hint="@string/new_password"
        android:padding="@dimen/little_margin">

        <EditText
            android:id="@+id/et_new_password"
            style="@style/EditTextStyle"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:background="@drawable/edit_text"
        android:hint="@string/conform_password"
        android:padding="@dimen/little_margin">

        <EditText
            android:id="@+id/et_config_new_password"
            style="@style/EditTextStyle"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/RejectButtonStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_change"
            style="@style/BlackButtonStyle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/change_password" />

    </LinearLayout>

</LinearLayout>