<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".utils.dialog.SendMessageDialog"
    android:padding="@dimen/small_margin"
    android:background="@drawable/white_button">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@drawable/edit_text"
        android:hint="@string/subject"
        android:padding="@dimen/little_margin">

        <EditText
            android:id="@+id/et_subject"
            style="@style/EditTextStyle"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@drawable/edit_text"
        android:hint="@string/message"
        android:padding="@dimen/little_margin">

        <EditText
            android:id="@+id/et_message"
            style="@style/EditTextStyle"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/RejectButtonStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_send"
            style="@style/BlackButtonStyle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/send" />

    </LinearLayout>
</LinearLayout>