<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.password.step_two.ResetStepTwoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/white_button"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <TextView
            style="@style/LargeTextViewStyle"
            android:text="@string/receive_code" />

        <TextView
            style="@style/SmallTextViewStyle"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/verify_string" />

        <com.poovam.pinedittextfield.SquarePinField
            android:id="@+id/spf_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:layoutDirection="ltr"
            android:textSelectHandle="@drawable/text_handle"
            android:textSize="@dimen/medium_text"
            app:cornerRadius="@dimen/small_margin"
            app:fieldBgColor="@color/colorPrimary"
            app:highlightColor="@color/colorAccent"
            app:noOfFields="4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_resend_text"
                style="@style/SmallTextViewStyle"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/resend_string"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_resend"
                style="@style/DarkButtonStyle"
                android:text="@string/resend" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>