<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/margin"
    android:paddingTop="@dimen/margin"
    android:paddingEnd="@dimen/margin"
    tools:context=".feature.main.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/no_focus_edit_text"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/small_margin"
               android:layout_marginBottom="@dimen/margin">

               <de.hdodenhof.circleimageview.CircleImageView
                   android:id="@+id/iv_avatar"
                   android:layout_width="@dimen/image_size"
                   android:layout_height="@dimen/image_size"
                   android:layout_gravity="center"
                   android:src="@drawable/img_user"/>

               <ProgressBar
                   android:id="@+id/pb_avatar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:indeterminateTint="@color/darkGradient"/>

           </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@drawable/no_focus_edit_text"
                android:padding="@dimen/small_margin">

                <TextView
                    style="@style/SmallTextViewStyle"
                    android:text="@string/identity"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_id"
                    android:layout_width="@dimen/medium_margin"
                    android:layout_height="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/img_user"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@drawable/no_focus_edit_text"
                android:padding="@dimen/small_margin">

                <TextView
                    style="@style/SmallTextViewStyle"
                    android:text="@string/vehicle_img"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_vehicle_img"
                    android:layout_width="@dimen/medium_margin"
                    android:layout_height="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/img_user"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@drawable/no_focus_edit_text"
                android:padding="@dimen/small_margin">

                <TextView
                    style="@style/SmallTextViewStyle"
                    android:text="@string/vehicle_license"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_vehicle_license"
                    android:layout_width="@dimen/medium_margin"
                    android:layout_height="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/img_user"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@drawable/no_focus_edit_text"
                android:padding="@dimen/small_margin">

                <TextView
                    style="@style/SmallTextViewStyle"
                    android:text="@string/driving_license"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_driving_license"
                    android:layout_width="@dimen/medium_margin"
                    android:layout_height="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/img_user"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@drawable/no_focus_edit_text"
                android:padding="@dimen/small_margin">

                <TextView
                    style="@style/SmallTextViewStyle"
                    android:text="@string/insurance_img"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_insurance_img"
                    android:layout_width="@dimen/medium_margin"
                    android:layout_height="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/img_user"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@drawable/no_focus_edit_text"
                android:padding="@dimen/small_margin">

                <TextView
                    style="@style/SmallTextViewStyle"
                    android:text="@string/credit_note"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_credit_note"
                    android:layout_width="@dimen/medium_margin"
                    android:layout_height="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/img_user"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/no_focus_edit_text"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_marginBottom="@dimen/small_margin"
                android:hint="@string/full_name">

                <EditText
                    android:id="@+id/et_full_name"
                    style="@style/EditTextStyle"
                    android:inputType="text"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_marginBottom="@dimen/small_margin"
                android:hint="@string/phone_number">

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/EditTextStyle"
                    android:inputType="phone"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_marginBottom="@dimen/small_margin"
                android:hint="@string/plate_number">

                <EditText
                    android:id="@+id/et_plate_number"
                    style="@style/EditTextStyle"
                    android:inputType="number"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_marginBottom="@dimen/small_margin"
                android:hint="@string/car_type">

                <EditText
                    android:id="@+id/et_car_type"
                    style="@style/EditTextStyle"
                    android:inputType="text"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_marginBottom="@dimen/small_margin"
                android:hint="@string/password">

                <EditText
                    android:id="@+id/et_password"
                    style="@style/EditTextStyle"
                    android:inputType="textPassword"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_marginBottom="@dimen/small_margin"
                android:hint="@string/finished_license">

                <EditText
                    android:id="@+id/et_finished_license"
                    style="@style/EditTextStyle"
                    android:inputType="date"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_marginBottom="@dimen/small_margin"
                android:hint="@string/city">

                <EditText
                    android:id="@+id/et_city"
                    style="@style/EditTextStyle"
                    android:inputType="text"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_marginBottom="@dimen/small_margin"
                android:hint="@string/neighborhood">

                <EditText
                    android:id="@+id/et_neighborhood"
                    style="@style/EditTextStyle"
                    android:inputType="text"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_edit_password"
            style="@style/BlackButtonStyle"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/edit_password" />

    </LinearLayout>

</ScrollView>